config/webhook/manifests.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: mutating-webhook-configuration
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /mutate--v1-pod
  failurePolicy: Fail
  name: mutating.pod.odh-model-controller.opendatahub.io
  rules:
  - apiGroups:
    - ""
    apiVersions:
    - v1
    operations:
    - CREATE
    resources:
    - pods
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /mutate-serving-kserve-io-v1alpha1-inferencegraph
  failurePolicy: Fail
  name: minferencegraph-v1alpha1.odh-model-controller.opendatahub.io
  rules:
  - apiGroups:
    - serving.kserve.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    resources:
    - inferencegraphs
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /mutate-serving-kserve-io-v1beta1-inferenceservice
  failurePolicy: Fail
  name: minferenceservice-v1beta1.odh-model-controller.opendatahub.io
  rules:
  - apiGroups:
    - serving.kserve.io
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - inferenceservices
  sideEffects: NoneOnDryRun
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /mutate-serving-kserve-io-v1alpha2-llminferenceservice
  failurePolicy: Fail
  name: connection-llmisvc.odh-model-controller.opendatahub.io
  rules:
  - apiGroups:
    - serving.kserve.io
    apiVersions:
    - v1alpha1
    - v1alpha2
    operations:
    - CREATE
    - UPDATE
    resources:
    - llminferenceservices
  sideEffects: NoneOnDryRun
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: validating-webhook-configuration
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /validate-nim-opendatahub-io-v1-account
  failurePolicy: Fail
  name: validating.nim.account.odh-model-controller.opendatahub.io
  rules:
  - apiGroups:
    - nim.opendatahub.io
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - accounts
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /validate-serving-kserve-io-v1alpha1-inferencegraph
  failurePolicy: Fail
  name: vinferencegraph-v1alpha1.odh-model-controller.opendatahub.io
  rules:
  - apiGroups:
    - serving.kserve.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - inferencegraphs
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /validate-serving-kserve-io-v1beta1-inferenceservice
  failurePolicy: Fail
  name: validating.isvc.odh-model-controller.opendatahub.io
  rules:
  - apiGroups:
    - serving.kserve.io
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    resources:
    - inferenceservices
  sideEffects: None
