config/webhook/webhook_patch.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: validating.odh-model-controller.opendatahub.io
  annotations:
    service.beta.openshift.io/inject-cabundle: true
webhooks:
  - name: validating.ksvc.odh-model-controller.opendatahub.io
    clientConfig:
      service:
        name: odh-model-controller-webhook-service
    objectSelector:
      matchExpressions:
        - key: serving.kserve.io/inferenceservice
          operator: Exists
  - name: validating.nim.account.odh-model-controller.opendatahub.io
    clientConfig:
      service:
        name: odh-model-controller-webhook-service
  - name: validating.isvc.odh-model-controller.opendatahub.io
    clientConfig:
      service:
        name: odh-model-controller-webhook-service
